Bug 354403 - Explicit tab titles for tabs are reset when changing the profile options
Summary: Explicit tab titles for tabs are reset when changing the profile options
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-26 14:22 UTC by thibaut.verron
Modified: 2018-03-16 01:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description thibaut.verron 2015-10-26 14:22:44 UTC
If you set an explicit title for a tab using the right click menu, "Rename tab", it is reset whenever you change one of the profile options (even not related to the tab title).

Reproducible: Always

Steps to Reproduce:
1. Set the tab name for a profile to "A"
2. Open a new tab with that profile
3. Right click on the tab name, select "Rename tab", enter "B" as the new tab title
4. Open the profile settings, and change for example the color scheme

Actual Results:  
The tab title is reverted to "A".

Expected Results:  
The tab title remains "B".

The problem does not seem to happen with the default profile-wide values for the tab title.

This bug can cause loss of information, by breaking a carefully organized set of tabs.

Note that it happens even if you only change the color theme, not touching the tab title, which is seriously counter-intuitive. You don't even need to "apply" the change because color theme settings are previewed. 

However, I believe that even if the user decides to change the profile-wide tab title, it should not effect those tab whose title was explicitely overridden.
Comment 1 thibaut.verron 2015-10-26 14:25:53 UTC
I can reproduce it using konsole 15.08.0 from Kubuntu as well.
Comment 2 Ahmad Samir 2018-03-15 18:37:33 UTC
https://phabricator.kde.org/D11363
Comment 3 Kurt Hindenburg 2018-03-16 01:13:53 UTC
Git commit 78beb596800f33950adf0e18f1d5032bce5a000f by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 16/03/2018 at 01:13.
Pushed by hindenburg into branch 'master'.

Preserve tab titles set by the user, when applying profile changes

Summary:
When applying profile changes don't touch tab titles explicilty set by
the user (via the rename tab dialog); the same goes when previewing
color schemes.

Update the tab text only if the user actually changed the the tab title
fomart in the rename tab dialog.
FIXED-IN: 18.04

Test Plan:
- In a konsole window with 2 or more tabs, rename a tab using the
  rename-tab dialog
- Open the Edit Profile dialog and change some settings and save, also
  try previewing some color schemes; note that the tab title changes
  are kept
- In the Edit Profile dialog, change the tab format on the Tabs page,
  and apply; note that the tab title the was renamed by the user isn't
  changed but the tab(s) whose name wasn't changed are affected by the
  tab title format setting change

- Open the rename-tab dialog, don't change anything and click OK; now
  konsole doesn't count that as a tab title change

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11363

M  +13   -0    src/Session.cpp
M  +15   -0    src/Session.h
M  +21   -9    src/SessionController.cpp
M  +5    -0    src/SessionController.h
M  +4    -2    src/SessionManager.cpp

https://commits.kde.org/konsole/78beb596800f33950adf0e18f1d5032bce5a000f