Preserve tab titles set by the user, when applying profile changes

Summary:
When applying profile changes don't touch tab titles explicilty set by
the user (via the rename tab dialog); the same goes when previewing
color schemes.

Update the tab text only if the user actually changed the the tab title
fomart in the rename tab dialog.

BUG: 354403
FIXED-IN: 18.04

Test Plan:
- In a konsole window with 2 or more tabs, rename a tab using the
  rename-tab dialog
- Open the Edit Profile dialog and change some settings and save, also
  try previewing some color schemes; note that the tab title changes
  are kept
- In the Edit Profile dialog, change the tab format on the Tabs page,
  and apply; note that the tab title the was renamed by the user isn't
  changed but the tab(s) whose name wasn't changed are affected by the
  tab title format setting change

- Open the rename-tab dialog, don't change anything and click OK; now
  konsole doesn't count that as a tab title change

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11363