src/SessionController.h
@@ -193,6 +193,11 @@ Q_SIGNALS:
      */
     void currentDirectoryChanged(const QString &dir);
 
+    /**
+     * Emitted when the user changes the tab title.
+     */
+    void tabRenamedByUser(bool renamed) const;
+
 public Q_SLOTS:
     /**
      * Issues a command to the session to navigate to the specified URL.
